--- a/Index.html
+++ b/Index.html
@@ -9,6 +9,6 @@
     <h1>Series</h1>
 
     <h3>Breaking Bad</h3>
-    <img src="https://es.web.img3.acsta.net/pictures/18/04/04/22/52/3191575.jpg" alt="Breaking Bad Portada"
+    <img src="https://es.web.img3.acsta.net/pictures/18/04/04/22/52/3191575.jpg" alt="Breaking Bad - Portada"
 </body>
 </html>
