--- a/Index.html
+++ b/Index.html
@@ -12,7 +12,7 @@
     <img src="https://es.web.img3.acsta.net/pictures/18/04/04/22/52/3191575.jpg" alt="Breaking Bad - Portada">
 
     <h3>Los Sopranos</h3>
-    <img src="https://www.formulatv.com/images/series/posters/000/91/dest_1.jpg" alt=""
+    <img src="https://www.formulatv.com/images/series/posters/000/91/dest_1.jpg" alt="Los Sopranos - Portada"
 
 </body>
 </html>
