--- a/Index.html
+++ b/Index.html
@@ -11,8 +11,15 @@
     <h3>Breaking Bad</h3>
     <img src="https://es.web.img3.acsta.net/pictures/18/04/04/22/52/3191575.jpg" alt="Breaking Bad - Portada">
 
+    <p>Breaking Bad sigue a Walter White, un profesor de química que, tras ser diagnosticado con cáncer, 
+        empieza a fabricar metanfetaminas para asegurar el futuro de su familia. Con el tiempo, su vida 
+        se convierte en una espiral de crimen y corrupción mientras se transforma en un temido narcotraficante 
+        llamado Heisenberg.</p>
+
     <h3>Los Sopranos</h3>
-    <img src="https://www.formulatv.com/images/series/posters/000/91/dest_1.jpg" alt="Los Sopranos - Portada"
+    <img src="https://www.formulatv.com/images/series/posters/000/91/dest_1.jpg" alt="Los Sopranos - Portada">
+
+    <h3>Stranger Things</h3>
 
 </body>
 </html>
