--- a/Index.html
+++ b/Index.html
@@ -19,6 +19,10 @@
     <h3>Los Sopranos</h3>
     <img src="https://www.formulatv.com/images/series/posters/000/91/dest_1.jpg" alt="Los Sopranos - Portada">
 
+    <p>The Sopranos sigue a Tony Soprano, un jefe de la mafia en Nueva Jersey, mientras intenta equilibrar su vida 
+        familiar con su rol en el crimen organizado. La serie explora sus conflictos internos y problemas personales 
+        a través de sus sesiones con una terapeuta, mientras enfrenta desafíos tanto en su familia como en su imperio criminal.</p>
+
     <h3>Stranger Things</h3>
 
 </body>
