--- a/Index.html
+++ b/Index.html
@@ -25,5 +25,12 @@
 
     <h3>Stranger Things</h3>
 
+    <img src="https://pics.filmaffinity.com/Stranger_Things_Serie_de_TV-875025085-large.jpg" alt="Stranger Things - Portada">
+
+    <p>Stranger Things sigue a un grupo de amigos en la década de 1980 en un pequeño pueblo de Indiana. 
+        La trama comienza con la desaparición de un niño llamado Will Byers, lo que lleva a la búsqueda 
+        de él y revela una serie de eventos sobrenaturales, incluyendo una niña con habilidades psíquicas 
+        y una dimensión paralela llamada el "Upside Down". La serie mezcla elementos de ciencia ficción, 
+        terror y nostalgia de los años 80.</p>
 </body>
 </html>
