--- a/Index.html
+++ b/Index.html
@@ -32,5 +32,9 @@
         de él y revela una serie de eventos sobrenaturales, incluyendo una niña con habilidades psíquicas 
         y una dimensión paralela llamada el "Upside Down". La serie mezcla elementos de ciencia ficción, 
         terror y nostalgia de los años 80.</p>
+
+    <h3>Gambito De Reina</h3>
+
+    <img src="c:\Users\bdpg6\AppData\Local\Temp\the_queen_s_gambit-906552919-mmed.jpg" alt="Gambito De Reina - Portada"
 </body>
 </html>
