--- a/Index.html
+++ b/Index.html
@@ -35,6 +35,11 @@
 
     <h3>Gambito De Reina</h3>
 
-    <img src="c:\Users\bdpg6\AppData\Local\Temp\the_queen_s_gambit-906552919-mmed.jpg" alt="Gambito De Reina - Portada"
+    <img src="c:\Users\bdpg6\AppData\Local\Temp\the_queen_s_gambit-906552919-mmed.jpg" alt="Gambito De Reina - Portada">
+
+    <p>Gambito de dama (o The Queen's Gambit) sigue a Beth Harmon, una prodigio del ajedrez huérfana que lucha 
+        con sus demonios internos y adicciones mientras asciende en el mundo del ajedrez competitivo. La serie 
+        muestra su viaje desde su infancia hasta convertirse en la campeona mundial de ajedrez, explorando temas 
+        de talento, ambición y superación personal.</p>
 </body>
 </html>
