--- a/Index.html
+++ b/Index.html
@@ -9,7 +9,7 @@
     <h1>Series</h1>
 
     <h3>Breaking Bad</h3>
-    <img src="https://es.web.img3.acsta.net/pictures/18/04/04/22/52/3191575.jpg" alt="Breaking Bad - Portada">
+    <img src="https://es.web.img3.acsta.net/pictures/18/04/04/22/52/3191575.jpg" alt="Breaking Bad - Portada" width="500">
 
     <p>Breaking Bad sigue a Walter White, un profesor de química que, tras ser diagnosticado con cáncer, 
         empieza a fabricar metanfetaminas para asegurar el futuro de su familia. Con el tiempo, su vida 
@@ -17,7 +17,7 @@
         llamado Heisenberg.</p>
 
     <h3>Los Sopranos</h3>
-    <img src="https://www.formulatv.com/images/series/posters/000/91/dest_1.jpg" alt="Los Sopranos - Portada">
+    <img src="https://www.formulatv.com/images/series/posters/000/91/dest_1.jpg" alt="Los Sopranos - Portada" width="500">
 
     <p>The Sopranos sigue a Tony Soprano, un jefe de la mafia en Nueva Jersey, mientras intenta equilibrar su vida 
         familiar con su rol en el crimen organizado. La serie explora sus conflictos internos y problemas personales 
@@ -25,7 +25,7 @@
 
     <h3>Stranger Things</h3>
 
-    <img src="https://pics.filmaffinity.com/Stranger_Things_Serie_de_TV-875025085-large.jpg" alt="Stranger Things - Portada">
+    <img src="https://pics.filmaffinity.com/Stranger_Things_Serie_de_TV-875025085-large.jpg" alt="Stranger Things - Portada" width="500">
 
     <p>Stranger Things sigue a un grupo de amigos en la década de 1980 en un pequeño pueblo de Indiana. 
         La trama comienza con la desaparición de un niño llamado Will Byers, lo que lleva a la búsqueda 
@@ -33,13 +33,21 @@
         y una dimensión paralela llamada el "Upside Down". La serie mezcla elementos de ciencia ficción, 
         terror y nostalgia de los años 80.</p>
 
-    <h3>Gambito De Reina</h3>
+    <h3>Gambito De Dama</h3>
 
-    <img src="c:\Users\bdpg6\AppData\Local\Temp\the_queen_s_gambit-906552919-mmed.jpg" alt="Gambito De Reina - Portada">
+    <img src="https://images.justwatch.com/poster/238720002/s718/gambito-de-reina.jpg" alt="Gambito De Reina - Portada" width="500">
 
-    <p>Gambito de dama (o The Queen's Gambit) sigue a Beth Harmon, una prodigio del ajedrez huérfana que lucha 
+    <p>Gambito De Dama (o The Queen's Gambit) sigue a Beth Harmon, una prodigio del ajedrez huérfana que lucha 
         con sus demonios internos y adicciones mientras asciende en el mundo del ajedrez competitivo. La serie 
         muestra su viaje desde su infancia hasta convertirse en la campeona mundial de ajedrez, explorando temas 
         de talento, ambición y superación personal.</p>
+
+    <h3>Betty La Fea</h3>
+    <img src="https://static.wikia.nocookie.net/beatriz-aurora-pinzon-solano/images/7/72/Portada-serie-ysblf.jpg/revision/latest?cb=20221217222329&path-prefix=es" alt="Betty La Fea - Portada" width="500">
+    <p>Betty la fea es una telenovela colombiana que sigue a Beatriz Pinzón, una mujer inteligente 
+        y capaz que, a pesar de ser considerada poco atractiva, consigue un trabajo en una importante 
+        empresa de moda. A lo largo de la serie, Betty enfrenta y supera numerosos desafíos profesionales 
+        y personales, demostrando que su valor no depende de su apariencia. La historia explora temas de 
+        autoaceptación, autoestima y transformación.</p>
 </body>
 </html>
